--- a/app/globals.css
+++ b/app/globals.css
@@ -126,7 +126,16 @@
 }
 
 @utility container {
-  padding-inline: 16px;
+  padding-inline: 60px;
+  @media (max-width: 1280px) {
+    padding-inline: 30px;
+  }
+  @media (max-width: 1024px) {
+    padding-inline: 20px;
+  }
+  @media (max-width: 768px) {
+    padding-inline: 16px;
+  }
   margin-inline: auto;
 }
 
