fixed cart and titles

--- a/app/globals.css
+++ b/app/globals.css
@@ -125,6 +125,19 @@
   }
 }
 
+@theme {
+  --text-main: 18px;
+  --text-mini-footer: 12px;
+  --text-mobile-footer: 12px;
+  --text-1: 20px;
+  --text-mobile-categories: 24px;
+  --text-categories: 32px;
+  --text-title: 36px;
+  --text-mobile-title: 36px;
+  --text-pageTitle: 36px;
+  --text-mobile-title2: 32px;
+}
+
 @utility container {
   padding-inline: 60px;
   @media (max-width: 1280px) {
